--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "start": "node index.js"
     },
     "engines": {
-        "node": "6.14.11",
-        "npm": "14.6.0"
+        "node": "6.x",
+        "npm": "14.x"
     },
     "repository": {
         "type": "git",
