--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "node js backend server",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js"
+        "start": "node index.js",
+        "dev": "nodemon index.js"
     },
     "engines": {
         "node": "6.x",
