--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "homepage": "https://github.com/jason-nordheim/emaily#readme",
     "dependencies": {
         "express": "^4.17.1",
+        "mongoose": "^5.11.12",
         "passport": "^0.4.1",
         "passport-google-oauth20": "^2.0.0"
     },
