--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "homepage": "https://github.com/jason-nordheim/emaily#readme",
     "dependencies": {
+        "cookie-session": "^1.4.0",
         "express": "^4.17.1",
         "mongoose": "^5.11.12",
         "passport": "^0.4.1",
