--- a/package.json
+++ b/package.json
@@ -1,40 +1,40 @@
 {
-    "name": "server",
-    "version": "1.0.0",
-    "description": "node js backend server",
-    "main": "index.js",
-    "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon index.js"
-    },
-    "engines": {
-        "node": "6.x",
-        "npm": "14.x"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/jason-nordheim/emaily.git"
-    },
-    "keywords": [
-        "node",
-        "npm",
-        "express",
-        "javascript"
-    ],
-    "author": "Jason Nordheim",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/jason-nordheim/emaily/issues"
-    },
-    "homepage": "https://github.com/jason-nordheim/emaily#readme",
-    "dependencies": {
-        "cookie-session": "^1.4.0",
-        "express": "^4.17.1",
-        "mongoose": "^5.11.12",
-        "passport": "^0.4.1",
-        "passport-google-oauth20": "^2.0.0"
-    },
-    "devDependencies": {
-        "nodemon": "^2.0.7"
-    }
+  "name": "server",
+  "version": "1.0.0",
+  "description": "node js backend server",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "engines": {
+    "node": "6.x",
+    "npm": "14.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jason-nordheim/emaily.git"
+  },
+  "keywords": [
+    "node",
+    "npm",
+    "express",
+    "javascript"
+  ],
+  "author": "Jason Nordheim",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jason-nordheim/emaily/issues"
+  },
+  "homepage": "https://github.com/jason-nordheim/emaily#readme",
+  "dependencies": {
+    "cookie-session": "^1.4.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.12",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
