--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "nodemon index.js"
   },
   "engines": {
-    "node": "6.x",
-    "npm": "14.0.0"
+    "node": "14.x",
+    "npm": "6.x"
   },
   "repository": {
     "type": "git",
